# streamlit-replicate-boss

./: .gitignore  CLAUDE.md  Makefile  README.md  main.py  models.yaml  presets.yaml  pyproject.toml  streamlit_app.py  validate_models_yaml.py
.claude/: settings.local.json
.claude/commands/: cook.md  cook_research_only.md
.claude/skills/streamlit-uv-development/scripts/: init_streamlit_project.py
.github/workflows/: ci.yml
.streamlit/: config.toml
bmad/_cfg/: files-manifest.csv  manifest.yaml
bmad/_cfg/ides/: claude-code.yaml
bmad/bmb/: config.yaml
bmad/bmm/: config.yaml
bmad/bmm/workflows/2-plan-workflows/tech-spec/: instructions.md
bmad/core/: config.yaml
config/: __init__.py  model_loader.py
docs/: PRD.md  architecture.md  automation-summary.md  bmm-workflow-status.yaml  brainstorming-session-results-2025-12-11.md  component-inventory.md  development-guide.md  epics.md  index.md  product-brief-streamlit-replicate-boss-2025-12-11.md  project-overview.md  project-scan-report.json  source-tree-analysis.md  sprint-status.yaml  tech-spec.md
docs/retrospectives/: epic-2-retro-2026-01-01.md
docs/stories/: 1-1-create-model-configuration-file-structure.context.xml  1-1-create-model-configuration-file-structure.md  1-2-load-and-validate-model-configuration.context.xml  1-2-load-and-validate-model-configuration.md  1-3-initialize-session-state-for-model-management.context.xml  1-3-initialize-session-state-for-model-management.md  1-4-create-model-selector-ui-component.context.xml  1-4-create-model-selector-ui-component.md  1-5-implement-basic-model-switching.context.xml  1-5-implement-basic-model-switching.md  1-6-integrate-selected-model-endpoint-with-api-calls.context.xml  1-6-integrate-selected-model-endpoint-with-api-calls.md  1-7-handle-configuration-errors-and-edge-cases.context.xml  1-7-handle-configuration-errors-and-edge-cases.md  2-1-create-preset-configuration-file-structure.context.xml  2-1-create-preset-configuration-file-structure.md  2-2-load-and-store-preset-configurations.context.xml  2-2-load-and-store-preset-configurations.md  2-3-display-model-information-in-sidebar.context.xml  2-3-display-model-information-in-sidebar.md  2-4-auto-apply-preset-on-model-selection.context.xml  2-4-auto-apply-preset-on-model-selection.md  2-5-allow-manual-override-of-preset-values.context.xml  2-5-allow-manual-override-of-preset-values.md  2-6-implement-backward-compatibility-with-existing-configuration.context.xml  2-6-implement-backward-compatibility-with-existing-configuration.md  2-7-enhanced-ui-updates-for-model-switching.context.xml  2-7-enhanced-ui-updates-for-model-switching.md  validation-report-2026-01-01-11-41-36.md
tests/: README.md  conftest.py  test_model_loader.py  test_preset_loader.py  test_preset_manager.py  test_session_state.py
tests/integration/: __init__.py  test_backward_compatibility.py  test_streamlit_app.py  test_streamlit_app_edge_cases.py
tests/support/: __init__.py  helpers.py
tests/unit/: test_helpers.py  test_icon.py  test_validate_models_yaml.py
utils/: preset_manager.py
