[project]
name = "streamlit-replicate-boss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "replicate>=1.0.7",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "streamlit-image-select>=0.6.0",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
addopts = [
    "--cov-branch",
    "--cov-report=annotate:cov_annotate",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
    "--cov-report=xml:cov.xml",
    "--cov=src",
    "--durations-min=0.05",
    "--durations=10",
    "--junitxml=junit/test-results.xml",
    "--timeout=30",
    "--timeout_method=thread",
]
filterwarnings = [
    "ignore::DeprecationWarning:.venv.*:",
    "ignore::ResourceWarning:asyncio",
]
markers = [
    "e2e: marks tests dealing with e2e testing (deselect with '-m \"not e2e\"')",
    "fast: marks tests as fast (run with '-m fast')",
    "integration: marks tests dealing with integration testing (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (run with '-m slow')",
    "unittest: marks tests dealing with unittest (deselect with '-m \"not unittest\"')",
]
python_classes = ["Test*"]
python_files = ["*.py"]
python_functions = ["test_*"]
pythonpath = "."
testpaths = ["src", "tests"]
timeout = 30
timeout_method = "thread"

# ===========================[ COVERAGE CONFIGURATION ]========================

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
exclude_also = [
    "@(abc\\.)?abstractmethod",
    "\\A(?s:.*# pragma: exclude file.*)\\Z",
    "def __repr__",
    "except ValueError:\\n\\s*assume\\(False\\)",
    "if 0:",
    "if __name__ == .__main__.:",
    "if self\\.debug",
    "no cover: start(?s:.)*?no cover: stop",
    "raise AssertionError",
    "raise NotImplementedError",
]
exclude_lines = [
    "@(abc.)?abstractmethod",
    "@overload",
    "@typing.overload",
    "assert_never",
    "def __repr__",
    "def __str__",
    "except ImportError:",
    "if TYPE_CHECKING",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "if self.debug",
    "if settings.DEBUG",
    "if typing.TYPE_CHECKING:",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "return NotImplemented",
    "typing.assert_never",
    '\\(Protocol\\):',
    '\\s*\\.\\.\\.',
]
ignore_errors = false
omit = ["*/test/*", "*/tests/*"]
show_missing = true
skip_covered = false
skip_empty = true

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing", "thread"]
data_file = ".coverage"
parallel = true
relative_files = true
source = ["src"]

[tool.coverage.xml]
output = "cov.xml"
