[project]
name = "streamlit-replicate-boss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.1",
    "pytest>=8.0.0",
    "replicate>=1.0.7",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "streamlit-image-select>=0.6.0",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
addopts = [
    "--cov-branch",
    "--cov-report=annotate:cov_annotate",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
    "--cov-report=xml:cov.xml",
    "--cov=.",
    "--cov-config=pyproject.toml",
    "--durations-min=0.05",
    "--durations=10",
    "--junitxml=junit/test-results.xml",
    "--timeout=30",
    "--timeout_method=thread",
]
filterwarnings = [
    "ignore::DeprecationWarning:.venv.*:",
    "ignore::ResourceWarning:asyncio",
]
markers = [
    "e2e: marks tests dealing with e2e testing (deselect with '-m \"not e2e\"')",
    "fast: marks tests as fast (run with '-m fast')",
    "integration: marks tests dealing with integration testing (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (run with '-m slow')",
    "unit: marks tests as unit tests (run with '-m unit')",
    "unittest: marks tests dealing with unittest (deselect with '-m \"not unittest\"')",
]
python_classes = ["Test*"]
python_files = ["*.py"]
python_functions = ["test_*"]
pythonpath = "."
testpaths = ["tests"]
timeout = 30
timeout_method = "thread"

# ===========================[ COVERAGE CONFIGURATION ]========================

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.paths]
source = ["."]

[tool.coverage.report]
exclude_also = [
    "@(abc\\.)?abstractmethod",
    "\\A(?s:.*# pragma: exclude file.*)\\Z",
    "def __repr__",
    "except ValueError:\\n\\s*assume\\(False\\)",
    "if 0:",
    "if __name__ == .__main__.:",
    "if self\\.debug",
    "no cover: start(?s:.)*?no cover: stop",
    "raise AssertionError",
    "raise NotImplementedError",
]
exclude_lines = [
    "@(abc.)?abstractmethod",
    "@overload",
    "@typing.overload",
    "assert_never",
    "def __repr__",
    "def __str__",
    "except ImportError:",
    "if TYPE_CHECKING",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "if self.debug",
    "if settings.DEBUG",
    "if typing.TYPE_CHECKING:",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "return NotImplemented",
    "typing.assert_never",
    '\\(Protocol\\):',
    '\\s*\\.\\.\\.',
]
ignore_errors = false
omit = ["*/test/*", "*/tests/*"]
show_missing = true
skip_covered = false
skip_empty = true

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing", "thread"]
data_file = ".coverage"
parallel = true
relative_files = true
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/conftest.py",
    "*/site-packages/*",
    "*/.venv/*",
    "*/bmad/*",
    "*/docs/*",
    "*/gallery/*",
    "*/junit/*",
    "*/logs/*",
    "*/ai_docs/*",
]

[tool.coverage.xml]
output = "cov.xml"

[dependency-groups]
dev = [
    "basedpyright>=1.36.2",
    "codespell>=2.4.1",
    "funlog>=0.2.1",
    "monkeytype>=23.3.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-recording>=0.13.4",
    "pytest-retry>=1.7.0",
    "pytest-skip-slow>=0.0.5",
    "pytest-skipuntil>=0.2.0",
    "pytest-subprocess>=1.5.3",
    "pytest-sugar>=1.1.1",
    "pytest-timeout>=2.4.0",
    "rich>=14.2.0",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]
